[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMobileSuit"
version="0.1.1"
description = "An easy way to build python-CLI App quickly,MobileSuit provides an easy way to build Console App quickly. For python."
keywords = ["commandline", "cli", "framework", "HIT-ReFreSH"]
license = { text = "MIT" }
readme = "README.md"
]
authors = [
    { name = "Ferdinand Sukhoi", email = "ferdinandsukhoi@outlook.com" }
]
requires-python = ">=3.9"

[project.optional-dependencies]
default=[
    "pyasn1~=0.6.1",
    "colorama~=0.4.6",
    "pyyaml~=6.0.1"
]

[project.urls]
Repository = "https://github.com/HIT-ReFreSH/PyMobileSuit"


[tool.setuptools_scm]
