[tool.poetry]
name = "PyMobileSuit"
version = "0.1.2"
description = "An easy way to build python-CLI App quickly, MobileSuit provides an easy way to build Console App quickly. For python."
keywords = ["commandline", "cli", "framework", "HIT-ReFreSH"]
license = "MIT"
readme = "README.md"
authors = ["Ferdinand Sukhoi <ferdinandsukhoi@outlook.com>"]
repository = "https://github.com/HIT-ReFreSH/PyMobileSuit"
packages = [
    { include = "ReFreSH", from = "src"},
    { include = "MobileSuit", from = "src/ReFreSH" },
    { include = "CSharp", from = "src/ReFreSH" }
]

[tool.poetry.dependencies]
python = ">=3.9"
pyasn1 = "~0.6.1"
colour = "~0.1.5"
pyyaml = "~6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
